[package]
name = "node-bcc-native"
version = "0.1.0"
authors = ["Fabian Beyerlein <mail@fabian-b.de>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_bcc_native"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
